hphp/hack/test/typecheck/shape_idx4.php.exp
File "shape_idx4.php", line 7, characters 15-16:
Invalid argument (Typing[4110])
File "Shapes.hhi", line 33, characters 35-44:
Some type constraint(s) are violated here
File "Shapes.hhi", line 33, characters 30-30:
T is a constrained type parameter
File "Shapes.hhi", line 33, characters 35-44:
This is a shape
File "shape_idx4.php", line 6, characters 15-17:
It is incompatible with an int
